Bai-tap-1/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family:'Segoe UI', Tahoma, Verdana, sans-serif
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background-image: url(./image/background.jpg);
    background-size: cover;
    background-position: center;
}

.wrapper{   
    width: 420px;
    height: 560px;
    background-color: white;
    backdrop-filter: blur(20px);
    border: 2px solid white;
    border-radius: 10px;
}

.wrapper .circular--portrait {
    position:relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    width: 100px;
    height: 100px;
    overflow: hidden;
    border-radius: 50%;
    background-position:50% 50%;
}

.wrapper .circular--portrait img {
    width: 100%;
    height: auto;
}


.wrapper h1{
    text-align: center;
    padding-top: 15px;
}

.wrapper h4{
    text-align: center;
    height: 35px;
    opacity: 30%;
    padding-bottom: 50px;
}

.wrapper .input-box {
    width: 100%;
    height: 40px;
    margin: 5px 0;
    padding: 0 50px 0 50px;
}

.input-box input {
    width: 100%;
    height: 100%;
    background: transparent;
    border: none;
    outline: none;
    border: 1px solid gray;
    border-radius: 2px;
    font-size: 16px;
    color: black;
    padding: 20px 100px 20px 20px;
}

.input-box input::placeholder {
    color: #BBCCD5;
}

.wrapper .remember-forgot {
    display: flex;
    justify-content: space-between;
    font-size:16px;
    margin: 15px 0 25px;
    padding: 0 50px 0 50px;
}

.remember-forgot label{
    padding-top: 9px;
}

.remember-forgot label input {
    margin-right: 5px;
}

.remember-forgot .btn {
    width: 30%;
    height: 40px;
    background-color: #F7847F;
    border: none;
    outline: none;
    border-radius: 3px;
    font-size: 16px;
    color: white;
    font-weight: 600;
}

.wrapper .register-link {
    font-size: 14px;
    text-align: center;
    
}

.register-link p {
    margin: 15px 0 35px;
}

.wrapper .register-link p a {
    text-decoration: none;
    color: black;
    font-weight: 600;
}

.wrapper .register-link p a:hover {
    text-decoration: underline;
}

.wrapper .social-connect {
    display: flex;
    width: 100%;
    font-size: 16px;
    justify-content:center;
    background-color: #F9FAFC;
    padding: 15px 30px 0 30px;
}

.social-connect p {
    color: #C0CFD8;
    padding-top: 5px;
}

.social-connect .facebook-logo {
    position:relative;
    display: block;
    width: 55px;
    height: 55px;
    overflow: hidden;
    border-radius: 50%;
    background-position:50% 50%;
    margin: 0 30px 0 30px;
}

.social-connect .facebook-logo img {
    width: 100%;
    height: auto;
    opacity: 50%;
}

.social-connect .twitter-logo {
    position:relative;
    display: block;
    width: 55px;
    height: 55px;
    overflow: hidden;
    border-radius: 50%;
    background-position:50% 50%;
}

.social-connect .twitter-logo img {
    width: 100%;
    height: auto;
    opacity: 50%;
}
    

